# soundify

./: .gitignore  README.md  main.py  pyproject.toml
soundify/: soundcloud.py  soundify.py  spotify.py
